Add new CSS styles and update index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,13 @@
 <html>
 <head>
     <title>Latest YouTube Videos</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Fonts links -->
+    <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@400;700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
+    <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
     <h1>Latest Videos</h1>
