Update page title to "Summary Feeds"

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Latest YouTube Videos</title>
+    <title>Summary Feeds</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google Fonts links -->
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@400;700" rel="stylesheet">
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
-    <h1>Latest Videos</h1>
+    <h1>Summary Feeds</h1>
     {% for channel_title, data in playlists.items() %}
         <h2><a href="{{ data.url }}">{{ channel_title }}</a></h2>
         <ul>
