--- a/templates/index.html
+++ b/templates/index.html
@@ -24,5 +24,11 @@
             {% endfor %}
         </ul>
     {% endfor %}
+    <!-- Footer area -->
+    <div class="email-container">
+        Made by Bing Dai in Vancouver, Canada 
+        <span class="divider">|||</span>
+        <a href="mailto:summaryfeeds@gmail.com">Contact</a>
+    </div>
 </body>
 </html>
