Update footer in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,9 +26,11 @@
     {% endfor %}
     <!-- Footer area -->
     <div class="email-container">
-        Made by Bing Dai in Vancouver, Canada 
+        Made by Bing Dai in Vancouver
         <span class="divider">|||</span>
         <a href="mailto:summaryfeeds@gmail.com">Contact</a>
+        <span class="divider">|||</span>
+        <a href="https://github.com/bingdai/summaryfeeds">Source Code</a>
     </div>
 </body>
 </html>
