Add base.html template and update index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Summary Feeds</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Google Fonts links -->
-    <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@400;700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@500" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
-    <!-- Link to external CSS file -->
-    <link rel="stylesheet" href="/static/css/styles.css">
-</head>
-<body>
-    <h1>Summary Feeds</h1>
+{% extends "base.html" %}
+{% block title %}Home - Summary Feeds{% endblock %}
+{% block content %}
     {% for channel_title, data in playlists.items() %}
         <h2><a href="{{ data.url }}">{{ channel_title }}</a></h2>
         <ul>
@@ -27,13 +16,4 @@
             {% endfor %}
         </ul>
     {% endfor %}
-    <!-- Footer area -->
-    <div class="email-container">
-        Made by Bing Dai in Vancouver
-        <span class="divider">|||</span>
-        <a href="mailto:summaryfeeds@gmail.com">Contact</a>
-        <span class="divider">|||</span>
-        <a href="https://github.com/bingdai/summaryfeeds">Source Code</a>
-    </div>
-</body>
-</html>
+{% endblock %}
