--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <h1><a href="/">Summary Feeds</a></h1>
+        <h1>Summary Feeds</h1>
     </header>
     
     <main>
