--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
                         {{ video['snippet']['title'] }}
                     </a>
                     <p class="video-date">
-                        Published on {{ video['snippet']['formattedPublishedAt'] }}
+                        {{ video['snippet']['formattedPublishedAt'] }}
                     </p>
                     {% if video.summaries %}
                         <p class="video-summary">
