--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,9 @@
 {% block title %}Home - Summary Feeds{% endblock %}
 {% block content %}
 <div class="content"> <!-- Container to control content width -->
+    <div class="tagline">
+        Concise Summaries of YouTube Tech Channels
+    </div>
     {% for channel_title, data in playlists.items() %}
         <h2><a href="{{ data.url }}">{{ channel_title }}</a></h2>
         <ul>
