--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <div class="tagline">
         Concise Summaries of YouTube Tech Channels
     </div>
+    <div class="tagline-divider"></div>
     {% for channel_title, data in playlists.items() %}
         <h2>{{ channel_title }}</h2>
         <ul>
