--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -18,10 +18,11 @@ body {
 }
 
 .tagline {
-    font-size: 20px; /* Adjusted for visibility */
+    font-size: 24px; /* Adjusted for visibility */
     text-align: center;
-    margin-bottom: 40px; /* Space before listing channels */
+    margin-bottom: 50px; /* Space before listing channels */
     color: #555; /* Subtle, professional color */
+    font-weight: bold;
 }
 
 .tagline-divider {
@@ -57,11 +58,12 @@ h1 {
 
 h2 {
     font-family: 'Lato', sans-serif;
-    font-size: 22px; /* Increased font size */
-    margin-top: 20px; /* Increased margin */
+    font-size: 20px; /* Increased font size */
+    margin-top: 30px; /* Increased margin */
     margin-bottom: 20px; /* Increased margin */
     text-align: center;
-    color:#444
+    color:#444;
+    text-transform: uppercase; /* Optional: style preference */
 }
 
 .email-container {
