Update tagline in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="content"> <!-- Container to control content width -->
     <div class="tagline">
-        Concise Summaries of YouTube Tech Channels
+        Summaries of the Latest AI-Related YouTube Videos
     </div>
     <div class="tagline-divider"></div>
     {% for channel_title, data in playlists.items() %}
