--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
     <!-- Link to external CSS file -->
     <link rel="stylesheet" href="/static/css/styles.css">
+    <!-- Google Analytics -->
+    {% if GA_TRACKINGID %}
+    <script 
+        async src="https://www.googletagmanager.com/gtag/js?id={{ GA_TRACKING_ID }}"
+    >
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', '{{ GA_TRACKING_ID }}');
+    </script>
+    {% endif %}
 </head>
+
 <body>
     <header>
         <h1>Summary Feeds</h1>
