Update Google Analytics tracking ID in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <!-- Link to external CSS file -->
     <link rel="stylesheet" href="/static/css/styles.css">
     <!-- Google Analytics -->
-    {% if GA_TRACKINGID %}
+    {% if GA_TRACKING_ID %}
     <script 
         async src="https://www.googletagmanager.com/gtag/js?id={{ GA_TRACKING_ID }}"
     >
