Add channel name to video display

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
             <li>
                 <div class="channel-info">
                     <img src="{{ video['channel_logo_url'] }}" alt="{{ video['channel_title'] }} logo" class="channel-logo">
+                    <span class="channel-name">{{ video['channel_title'] }}</span>
                 </div>                
                 <a href="https://www.youtube.com/watch?v={{ video['video_id'] }}">{{ video['title'] }}</a>
                 <p class="video-summary">{{ video['summary'] }}</p>
