--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -114,6 +114,7 @@ li a {
     color: #2a6496;
     text-decoration: none;
     font-weight: bold; /* Make links stand out more */
+    font-size: 18px;
     width: 100%; /* Ensures the link occupies the full width for better clickability */
     display: block; /* Make the anchor tag behave as a block element */
     text-align: center; /* Center-align the text of the anchor tag */
