--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <div class="tagline">AI-Focused YouTube Videos, Summarized</div>
     <div class="tagline-divider"></div>
     {% for date, videos in daily_videos.items() %}
-        <h2>{{ date }}</h2>
+        <h2 class="date-header">{{ date }}</h2>
         <ul>
             {% for video in videos %}
             <li>
