Update fetch_transcript route to accept video_id as a parameter

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -19,8 +19,7 @@
             <li>
                 {{ video.title }}
                 <!-- Fetch Transcript Button -->
-                <form action="{{ url_for('fetch_transcript') }}" method="post" style="display: inline;">
-                    <input type="hidden" name="video_id" value="{{ video.id }}">
+                <form action="{{ url_for('fetch_transcript', video_id=video.id) }}" method="post" style="display: inline;">
                     <input type="submit" value="Fetch Transcript">
                 </form>
                 <!-- Generate Summary Button -->
