Update title in index.html template

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Home - Summary Feeds{% endblock %}
+{% block title %}Summary Feeds{% endblock %}
 {% block content %}
 <div class="content">
     <div class="tagline">AI-Focused YouTube Videos, Summarized</div>
